--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
     background-color: #4CAF50;
     padding: 1rem;
     text-align: center;
+    
+
   }
 
   header img {
@@ -59,7 +61,14 @@ body {
   .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 1rem;
+    border-radius: 20px;
+    width: 59%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
   
   .main-content {
@@ -72,6 +81,7 @@ body {
     flex: 2;
     background-color: #c0c0c0;
     border-radius: 30px;
+    
   }
   
   .article {
@@ -79,6 +89,11 @@ body {
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 2rem;
+    width: 100%;
+    border: black 1px solid;
+    margin: 20px;
+    justify-content: center;
+    align-items: flex-start;
   }
   
   .article h2 {
