--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body {
     font-family: Arial, sans-serif;
-    line-height: 1.6;
     color: #333;
-    margin: 0;
+    margin-inline-start: 200px;
+    margin-inline-end: 200px;
   }
   
   header {
     background-color: #4CAF50;
     padding: 1rem;
     text-align: center;
-    
-
+    border-radius: 20px;
   }
 
   header img {
@@ -31,7 +30,9 @@ body {
 
   nav {
     background-color: #333;
-    height: 50px;
+    height: 70px;
+    border-radius: 20px;
+    align-items: center;
   }
   
   nav ul {
@@ -40,10 +41,12 @@ body {
     display: flex;
     align-items: center;
     height: 100%;
+    text-align: center;
   }
   
   nav ul li {
-    padding: 0 1rem;
+    padding: 1rem;
+
   }
   
   nav ul li a {
@@ -52,6 +55,7 @@ body {
     height: 100%;
     display: flex;
     align-items: center;
+    text-align: center;
   }
   
   nav ul li a:hover {
@@ -117,6 +121,7 @@ body {
   aside {
     flex: 1;
     margin-left: 2rem;
+    
   }
   
   aside h3 {
@@ -157,7 +162,9 @@ body {
     padding: 1rem;
     color: white;
     text-align: center;
-    margin-top: 2rem;
+    border-radius: 20px;
+    align-content: center;
+
   }
   
   footer a {
