--- a/style.css
+++ b/style.css
@@ -1,27 +1,40 @@
 body {
     font-family: Arial, sans-serif;
     color: #333;
-    margin-inline-start: 200px;
-    margin-inline-end: 200px;
+
   }
   
   header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
     background-color: #4CAF50;
+    width: 70%;
     padding: 1rem;
     text-align: center;
     border-radius: 20px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
   }
 
   header img {
-    width: 80px;
-    height: 80px;
     float: right;
-    margin-top: -5rem;
+    margin-left: 170px;
   }
 
-  header h1 {
+  header logo {
     color: white;
-    font-size: 1.5rem;
+    font-size: 18px;
+  }
+  header h2{
+    font-size: 40px;
+    margin: 0;
+  }
+
+  header h3{
+    font-size: 40px;
+    margin: 0;
   }
 
   h2{
@@ -32,7 +45,10 @@ body {
     background-color: #333;
     height: 70px;
     border-radius: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     align-items: center;
+    
   }
   
   nav ul {
@@ -42,6 +58,7 @@ body {
     align-items: center;
     height: 100%;
     text-align: center;
+   
   }
   
   nav ul li {
@@ -63,37 +80,37 @@ body {
   }
   
   .container {
-    max-width: 1200px;
-    margin: 0 auto;
+    width: 100%;
     border-radius: 20px;
-    width: 59%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
+
     background-size: cover;
     background-repeat: no-repeat;
   }
   
   .main-content {
+    width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    margin-top: 2rem;
+    flex-direction: column;
+    margin: auto;
   }
   
   .article-container {
-    flex: 2;
+    width: 100%;
     background-color: #c0c0c0;
     border-radius: 30px;
-    
+    grid-column: 1/2;
   }
+
   
   .article {
     background-color: gray;
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 2rem;
-    width: 100%;
+    width: 60%;
     border: black 1px solid;
     margin: 20px;
     justify-content: center;
@@ -114,13 +131,12 @@ body {
   }
 
   .article-container img {
-    width: 50%;
     border-radius: 20px;
+    
   }
   
-  aside {
-    flex: 1;
-    margin-left: 2rem;
+  .sidebar {
+    width: 50%;
     
   }
   
@@ -159,16 +175,71 @@ body {
   
   footer {
     background-color: #333;
-    padding: 1rem;
     color: white;
     text-align: center;
     border-radius: 20px;
     align-content: center;
+    width: 70%;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
 
+  .pie {
+    text-align: center;
+    align-content: center;
   }
   
-  footer a {
-    color: white;
-    text-decoration: none;
+  .box-text{
+    display: flex;
+    flex-direction: row;
   }
-  
+.article-text{
+  margin: 40px;
+}
+.article-text h2{
+  text-align: left;
+}
+.container-menu{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.container-menu li{
+  margin: 30px;
+}
+hr{
+  width: 20px;
+  transform: rotate(90deg);
+}
+form{
+  width: 50%;
+}
+.container-main-content{
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+width: 70%;
+display: grid;
+grid-template-columns: 60% 40%;
+}
+.asidebar{
+  width: 90%;
+  grid-column:2 ;
+  grid-row: 1/3;
+  margin: 30px;
+}
+.sidebar{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.container-box{
+  width: 72.49%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
