--- a/style.css
+++ b/style.css
@@ -235,6 +235,8 @@ grid-template-columns: 60% 40%;
   grid-column:2 ;
   grid-row: 1/3;
   margin: 30px;
+  background-color: #66cccc;
+  border-radius: 20px;
 }
 .sidebar{
   display: flex;
