--- a/style.css
+++ b/style.css
@@ -21,10 +21,11 @@ body {
   header img {
     float: right;
     margin-left: 170px;
+   
   }
 
   header logo {
-    color: white;
+    color: #333;
     font-size: 25px;
   }
   header h2{
@@ -49,7 +50,7 @@ body {
   }
 
   nav {
-    background-color: #333;
+    background-color: #003333;
     height: 70px;
     border-radius: 20px;
     border-top-left-radius: 0;
@@ -106,14 +107,14 @@ body {
   
   .article-container {
     width: 100%;
-    background-color: #c0c0c0;
+    background-color: #ffff99;
     border-radius: 30px;
     grid-column: 1/2;
   }
 
   
   .article {
-    background-color: gray;
+    background-color: #ffff99;
     padding: 1rem;
     border-radius: 10px;
     margin-bottom: 2rem;
@@ -139,7 +140,7 @@ body {
 
   .article-container img {
     border-radius: 20px;
-    
+    border: 1px solid black;
   }
   
   .sidebar {
@@ -148,14 +149,25 @@ body {
   }
   
   aside h3 {
-    color: #4CAF50;
+    color: white;
     margin-bottom: 1rem;
+    background-color: #003333;
+    width: 95%;
+    margin-top: -0.5rem;
+    padding: 0.5rem;
+    text-align: center;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    
   }
   
   aside form {
     label {
       display: block;
       margin-bottom: 0.5rem;
+      columns: white;
+      color: white;
+      float: left;
     }
     
     input[type="text"],
@@ -165,26 +177,30 @@ body {
       width: 100%;
       padding: 0.5rem;
       margin-bottom: 1rem;
+      border: 2px solid #8c8c8c;
     }
     
     button[type="submit"] {
-      background-color: #4CAF50;
-      color: white;
+      background-color: #d0d2d3;
+      color: #333;
       padding: 0.5rem 1rem;
       border: none;
       cursor: pointer;
+      border-radius: 10%;
+      border: 2px solid #8c8c8c;
     }
     
     button[type="submit"]:hover {
-      background-color: #3e8e41;
+      background-color: white;
     }
   }
   
   footer {
-    background-color: #333;
+    background-color: #003333;
     color: white;
     text-align: center;
-    border-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
     align-content: center;
     width: 70%;
     display: flex;
@@ -235,8 +251,9 @@ grid-template-columns: 60% 40%;
   grid-column:2 ;
   grid-row: 1/3;
   margin: 30px;
-  background-color: #66cccc;
+  background-color: #006666;
   border-radius: 20px;
+  padding-block: 0.5rem;
 }
 .sidebar{
   display: flex;
